--- a/Unidad03/01/API/package.json
+++ b/Unidad03/01/API/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "01",
+  "name": "techmusic",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +13,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1"
-    
-  }
+  },
+  "description": ""
 }
